fix spacing in publications

--- a/src/styles/Publication.module.scss
+++ b/src/styles/Publication.module.scss
@@ -7,6 +7,7 @@
     align-items: center;
     padding: 10px;
     margin: 20px;
+    gap: 60px; 
 }
 
 .attachment {   
